test/typechecker.d/invalid/fns4.souc.bad
f(x: Integer): Integer = x + 1

g(x: Integer): Char = fndo
	return 'a' & f
